<resources>
    <string name="app_name">PDOLogin</string>
    <string name="hint_id">ID를 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_name">성명을 입력하세요</string>
    <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
    <string name="hint_email">이메일을 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_ID_PW">ID/PW찾기</string>
    <string name="btn_logout">로그아웃</string>
    <string name="title_activity_board">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>